# QMSD-ESP32-BSP

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  README_CN.md  component.cmake
components-ext/qmsd_audio/libhelix-mp3/src/: CMakeLists.txt  mp3dec.c
components-ext/qmsd_audio/libhelix-mp3/src/pub/: mp3common.h  mp3dec.h  mpadecobjfixpt.h
components-ext/qmsd_audio/libhelix-mp3/src/real/: bitstream.c  coder.h  huffman.c  scalfact.c
components-ext/qmsd_button/: CMakeLists.txt  qmsd_button.c  qmsd_button.h  qmsd_button_adc.c  qmsd_button_adc_new.c
components-ext/qmsd_button/example/: main.c
components-third-party/i2c_bus/: CMakeLists.txt  i2c_device.c  i2c_device.h  i2c_device_hal.c  i2c_device_hal.h
components-third-party/i2c_bus/i2c_hal/: i2c_device_hal.c  i2c_device_hal.h
components-third-party/i2c_bus/i2c_hal_master/: i2c_device_hal.c  i2c_device_hal.h
components-third-party/i2c_bus/i2s_hal_master/: i2c_device_hal.c
components-third-party/ui_engine/: CMakeLists.txt  Kconfig
components-third-party/ui_engine/lvgl7/lvgl/: CHANGELOG.md  CMakeLists.txt  Kconfig  component.mk  library.json  library.properties  lv_conf.h  lvgl.h
components-third-party/ui_engine/lvgl7/lvgl/src/: lv_conf_internal.h  lv_conf_kconfig.h
components-third-party/ui_engine/lvgl7/lvgl/src/lv_core/: lv_disp.c  lv_group.c  lv_indev.c  lv_obj.c  lv_obj.h  lv_refr.c  lv_style.c  lv_style.h
components-third-party/ui_engine/lvgl7/lvgl/src/lv_draw/: lv_draw_arc.c  lv_draw_blend.c  lv_draw_img.c  lv_draw_label.c  lv_draw_line.c  lv_draw_mask.c  lv_draw_rect.c  lv_draw_triangle.c  lv_img_buf.c  lv_img_cache.c  lv_img_decoder.c
components-third-party/ui_engine/lvgl7/lvgl/src/lv_font/: lv_font.c  lv_font_dejavu_16_persian_hebrew.c  lv_font_fmt_txt.c  lv_font_loader.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c  lv_font_simsun_16_cjk.c  lv_font_unscii_16.c  lv_font_unscii_8.c
components-third-party/ui_engine/lvgl7/lvgl/src/lv_gpu/: lv_gpu_nxp_pxp.c  (+4 more)
components-third-party/ui_engine/lvgl8/lvgl/: Kconfig
components-third-party/ui_engine/lvgl9/lvgl/: Kconfig
components/qmsd_board/: CMakeLists.txt  Kconfig.projbuild
components/qmsd_board/board/esp32-s3/ZX2D10CE01S-4848/: qmsd_board.c  qmsd_board_def.h  qmsd_board_pin.h  qmsd_screen_rgb_spi.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX2D10GE01R-V-4848/: qmsd_board.c  qmsd_board_def.h  qmsd_board_pin.h  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX2D80CE02S-2432/: qmsd_board.c  qmsd_board.h  qmsd_board_pin.h  qmsd_screen_driver.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX2D80CECOF-2432/: qmsd_board.c  qmsd_board_def.h  qmsd_board_pin.h  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX3D50CE02S-USRC-4832/: qmsd_board.c  qmsd_screen_driver.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX3D95CE01S-AR-4848/: qmsd_board.c  qmsd_board_def.h  qmsd_board_pin.h  qmsd_screen_rgb.c  qmsd_screen_rgb_spi.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX3D95CE01S-TR-4848/: qmsd_board.c  qmsd_board_def.h  qmsd_screen_rgb.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX3D95CE01S-UR-4848/: qmsd_board.c  qmsd_board_pin.h  qmsd_screen_rgb.c  qmsd_screen_rgb_spi.c
components/qmsd_board/board/esp32-s3/ZX4D30CE08S-4827/: qmsd_board.c  qmsd_board_def.h  qmsd_board_pin.h  qmsd_screen_driver.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX4D30NE01S-UR-4827/: qmsd_board.c  qmsd_board.h  qmsd_board_def.h  qmsd_board_pin.h  qmsd_screen_rgb.c  sdkconfig.defaults
components/qmsd_board/board/esp32-s3/ZX7D00CE01S-8048/: qmsd_board.c  qmsd_board.h  qmsd_board_def.h  qmsd_board_pin.h  qmsd_screen_rgb.c  sdkconfig.defaults
components/qmsd_board/board_utility/: qmsd_board_config.h  qmsd_board_utils.c  qmsd_board_utils.h
components/qmsd_gui/: CMakeLists.txt  qmsd_gui.h  qmsd_gui_lvgl_v7.c  qmsd_gui_lvgl_v8.c  qmsd_gui_lvgl_v9.c
components/qmsd_gui/qmsd_gui/: qmsd_top_gui.h
components/qmsd_gui/qmsd_gui/api/: qmsd_base_gui_api.h
components/qmsd_gui/qmsd_gui/control/: qmsd_gui_control.h  qmsd_gui_control_uart.h
components/qmsd_gui/qmsd_gui/elements/: qmsd_gui_obj.h  qmsd_gui_objll.h
components/qmsd_gui/qmsd_gui_port/include/: base_widget_api.h  base_widget_type.h  qmsd_gui.h  qmsd_widget_arc.h  qmsd_widget_bar.h  qmsd_widget_button.h  qmsd_widget_calendar.h  qmsd_widget_checkbox.h  qmsd_widget_clock.h  qmsd_widget_container.h  qmsd_widget_dropdown.h  qmsd_widget_gauge.h  qmsd_widget_image.h  qmsd_widget_keyboard.h  qmsd_widget_label.h  qmsd_widget_led.h  qmsd_widget_line.h  qmsd_widget_list.h  qmsd_widget_menu.h  qmsd_widget_msgbox.h  qmsd_widget_preloader.h  qmsd_widget_roller.h  qmsd_widget_slider.h  qmsd_widget_style.h  qmsd_widget_switch.h  qmsd_widget_tabview.h  qmsd_widget_textarea.h  qmsd_widget_tileview.h
components/qmsd_screen/: CMakeLists.txt
components/qmsd_screen/lcd_panel/: qmsd_lcd_wrapper.c  qmsd_lcd_wrapper.h
components/qmsd_screen/rgb_panel/: esp_lcd_common.h  qmsd_lcd_panel_rgb.c  qmsd_lcd_panel_rgb.h
example/lvgl-from-8ms/components/zx_ui_lvgl/: CMakeLists.txt
example/lvgl-from-8ms/components/zx_ui_lvgl/user_logic/: screen_main_logic.c  zx_screen_logic.c  zx_screen_logic.h
example/lvgl-from-8ms/components/zx_ui_lvgl/zx_ui/: zx_ui.h  zx_ui_entry.c  zx_ui_entry.h
example/lvgl-from-squareline/components/squareline/: CMakeLists.txt
example/lvgl-from-squareline/components/squareline/squareline_ui/: ui.c  ui.h  ui_helpers.c
tools/qmsd_cmake/: CMakeLists.txt
(+215 files in other folders)
